syntax = "proto3";

package topos.shared.v1;

message SubnetId {
  bytes value = 1;
}
